unnecessary links disabled

--- a/app/index.html
+++ b/app/index.html
@@ -268,7 +268,7 @@
             <li class="surf-map__item surf-map__item--1 wow zoomIn" data-top="1.86" data-left="0">
 
               <div class="surf-map__content-box">
-                <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
+                <a href="#" class="surf-map__surf-link" onclick="return false"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
                 <p class="surf-map__location">Australia</p>
                 <ul class="surf-map__conditions-list">
@@ -293,7 +293,7 @@
             </li>
             <li class="surf-map__item surf-map__item--2 wow zoomIn" data-top="2.351" data-left="9.022">
               <div class="surf-map__content-box">
-                <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
+                <a href="#" class="surf-map__surf-link" onclick="return false"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
                 <p class="surf-map__location">Australia</p>
                 <ul class="surf-map__conditions-list">
@@ -318,7 +318,7 @@
             </li>
             <li class="surf-map__item surf-map__item--3 wow zoomIn" data-top="1.984" data-left="3.647">
               <div class="surf-map__content-box">
-                <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
+                <a href="#" class="surf-map__surf-link" onclick="return false"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
                 <p class="surf-map__location">Australia</p>
                 <ul class="surf-map__conditions-list">
@@ -343,7 +343,7 @@
             </li>
             <li class="surf-map__item surf-map__item--4 wow zoomIn" data-top="2.645" data-left="2.330">
               <div class="surf-map__content-box">
-                <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
+                <a href="#" class="surf-map__surf-link" onclick="return false"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
                 <p class="surf-map__location">Australia</p>
                 <ul class="surf-map__conditions-list">
@@ -368,7 +368,7 @@
             </li>
             <li class="surf-map__item surf-map__item--5 wow zoomIn" data-top="1.173" data-left="1.875">
               <div class="surf-map__content-box">
-                <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
+                <a href="#" class="surf-map__surf-link" onclick="return false"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
                 <p class="surf-map__location">Australia</p>
                 <ul class="surf-map__conditions-list">
@@ -393,7 +393,7 @@
             </li>
             <li class="surf-map__item surf-map__item--6 wow zoomIn" data-top="1.628" data-left="1.492">
               <div class="surf-map__content-box">
-                <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
+                <a href="#" class="surf-map__surf-link" onclick="return false"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
                 <p class="surf-map__location">Australia</p>
                 <ul class="surf-map__conditions-list">
@@ -418,7 +418,7 @@
             </li>
             <li class="surf-map__item surf-map__item--7 wow zoomIn" data-top="1.237" data-left="1.116">
               <div class="surf-map__content-box">
-                <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
+                <a href="#" class="surf-map__surf-link" onclick="return false"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
                 <p class="surf-map__location">Australia</p>
                 <ul class="surf-map__conditions-list">
@@ -443,7 +443,7 @@
             </li>
             <li class="surf-map__item surf-map__item--8 wow zoomIn" data-top="1.237" data-left="3">
               <div class="surf-map__content-box">
-                <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
+                <a href="#" class="surf-map__surf-link" onclick="return false"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
                 <p class="surf-map__location">Australia</p>
                 <ul class="surf-map__conditions-list">
@@ -591,7 +591,7 @@
               <span class="travel-info__suptext">Round Trip</span>
             </li>
           </ul>
-          <a href="#" class="btn-common btn-travel">Book <span>Flight</span></a>
+          <a href="#" class="btn-common btn-travel" onclick="return false">Book <span>Flight</span></a>
         </div>
       </div>
     </div>
@@ -654,7 +654,7 @@
               <span class="sleep-info__suptext">Per Night</span>
             </li>
           </ul>
-          <a href="#" class="btn-common btn-sleep">Book <span>stay</span></a>
+          <a href="#" class="btn-common btn-sleep" onclick="return false">Book <span>stay</span></a>
         </div>
       </div>
     </div>
@@ -672,7 +672,7 @@
               <h3 class="title title--small">North Nugget TT <br>Surfboard</h3>
               <img class="shop__stars" src="img/sleep/5stars.svg" alt="raiting">
               <p class="shop__board-price">$799<sup>99</sup></p>
-              <a href="#" class="btn-common">drop <span>in</span></a>
+              <a href="#" class="btn-common" onclick="return false">drop <span>in</span></a>
             </div>
             <div class="surfboard wow jackInTheBox">
               <img src="img/shop/board.png" alt="board">
