fixed animation on surf-map

--- a/app/index.html
+++ b/app/index.html
@@ -263,9 +263,9 @@
 
       <div class="surf-shape">
         <div class="surf-map">
-          <ul class="surf-map__list" id="surf-map-list">
+          <ul class="surf-map__list wow zoomIn" id="surf-map-list" data-wow-offset="600">
 
-            <li class="surf-map__item surf-map__item--1 wow zoomIn" data-top="1.86" data-left="0">
+            <li class="surf-map__item surf-map__item--1" data-top="1.86" data-left="0">
 
               <div class="surf-map__content-box">
                 <a href="#" class="surf-map__surf-link" onclick="return false"><img src="img/header/arrow-right.svg" alt=""></a>
@@ -291,7 +291,7 @@
               </div>
               <div class="surf-map__circle"></div>
             </li>
-            <li class="surf-map__item surf-map__item--2 wow zoomIn" data-top="2.351" data-left="9.022">
+            <li class="surf-map__item surf-map__item--2" data-top="2.351" data-left="9.022">
               <div class="surf-map__content-box">
                 <a href="#" class="surf-map__surf-link" onclick="return false"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
@@ -316,7 +316,7 @@
               </div>
               <div class="surf-map__circle"></div>
             </li>
-            <li class="surf-map__item surf-map__item--3 wow zoomIn" data-top="1.984" data-left="3.647">
+            <li class="surf-map__item surf-map__item--3" data-top="1.984" data-left="3.647">
               <div class="surf-map__content-box">
                 <a href="#" class="surf-map__surf-link" onclick="return false"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
@@ -341,7 +341,7 @@
               </div>
               <div class="surf-map__circle"></div>
             </li>
-            <li class="surf-map__item surf-map__item--4 wow zoomIn" data-top="2.645" data-left="2.330">
+            <li class="surf-map__item surf-map__item--4" data-top="2.645" data-left="2.330">
               <div class="surf-map__content-box">
                 <a href="#" class="surf-map__surf-link" onclick="return false"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
@@ -366,7 +366,7 @@
               </div>
               <div class="surf-map__circle"></div>
             </li>
-            <li class="surf-map__item surf-map__item--5 wow zoomIn" data-top="1.173" data-left="1.875">
+            <li class="surf-map__item surf-map__item--5" data-top="1.173" data-left="1.875">
               <div class="surf-map__content-box">
                 <a href="#" class="surf-map__surf-link" onclick="return false"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
@@ -391,7 +391,7 @@
               </div>
               <div class="surf-map__circle"></div>
             </li>
-            <li class="surf-map__item surf-map__item--6 wow zoomIn" data-top="1.628" data-left="1.492">
+            <li class="surf-map__item surf-map__item--6" data-top="1.628" data-left="1.492">
               <div class="surf-map__content-box">
                 <a href="#" class="surf-map__surf-link" onclick="return false"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
@@ -416,7 +416,7 @@
               </div>
               <div class="surf-map__circle"></div>
             </li>
-            <li class="surf-map__item surf-map__item--7 wow zoomIn" data-top="1.237" data-left="1.116">
+            <li class="surf-map__item surf-map__item--7" data-top="1.237" data-left="1.116">
               <div class="surf-map__content-box">
                 <a href="#" class="surf-map__surf-link" onclick="return false"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
@@ -441,7 +441,7 @@
               </div>
               <div class="surf-map__circle"></div>
             </li>
-            <li class="surf-map__item surf-map__item--8 wow zoomIn" data-top="1.237" data-left="3">
+            <li class="surf-map__item surf-map__item--8" data-top="1.237" data-left="3">
               <div class="surf-map__content-box">
                 <a href="#" class="surf-map__surf-link" onclick="return false"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
