chaged animation on surf-slider

--- a/app/index.html
+++ b/app/index.html
@@ -471,8 +471,8 @@
       </div>
 
       <div class="surf-slider">
-        <ul class="surf-list">
-          <li class="wow slideInLeft" data-wow-delay="0s">
+        <ul class="surf-list wow slideInRight" data-wow-duration="1.5s">
+          <li>
             <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-1.jpg')">
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Malibu Beach</h3>
@@ -481,7 +481,7 @@
               </div>
             </div>
           </li>
-          <li class="wow slideInLeft" data-wow-delay="0.1s">
+          <li>
             <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-2.jpg')">
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Malibu Beach</h3>
@@ -490,7 +490,7 @@
               </div>
             </div>
           </li>
-          <li class="wow slideInLeft" data-wow-delay="0.2s">
+          <li>
             <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-3.jpg')">
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Malibu Beach</h3>
@@ -499,7 +499,7 @@
               </div>
             </div>
           </li>
-          <li class="wow slideInLeft" data-wow-delay="0.3s">
+          <li>
             <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-4.jpg')">
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Malibu Beach</h3>
@@ -509,7 +509,7 @@
             </div>
           </li>
 
-          <li class="wow slideInLeft" data-wow-delay="0.4s">
+          <li>
             <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-5.jpg')">
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Malibu Beach</h3>
@@ -518,7 +518,7 @@
               </div>
             </div>
           </li>
-          <li class="wow slideInLeft" data-wow-delay="0.5s">
+          <li>
             <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-6.jpg')">
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Malibu Beach</h3>
