work for btn-common

--- a/app/index.html
+++ b/app/index.html
@@ -493,7 +493,7 @@
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Anaeho'omalu Beach</h3>
                 <p class="surf-card__location">hawaii <span>|</span> USA</p>
-                <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+                <a href="#" class="btn-common btn-surf" onclick="return false">view <span>surf</span></a>
               </div>
             </div>
           </li>
@@ -502,7 +502,7 @@
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Lorinia Beach</h3>
                 <p class="surf-card__location">California <span>|</span> USA</p>
-                <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+                <a href="#" class="btn-common btn-surf" onclick="return false">view <span>surf</span></a>
               </div>
             </div>
           </li>
@@ -511,7 +511,7 @@
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Sorriji Beach</h3>
                 <p class="surf-card__location">Haiti</p>
-                <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+                <a href="#" class="btn-common btn-surf" onclick="return false">view <span>surf</span></a>
               </div>
             </div>
           </li>
@@ -520,7 +520,7 @@
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Sunny Beach</h3>
                 <p class="surf-card__location">Brazil</p>
-                <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+                <a href="#" class="btn-common btn-surf" onclick="return false">view <span>surf</span></a>
               </div>
             </div>
           </li>
@@ -530,7 +530,7 @@
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Moon Beach</h3>
                 <p class="surf-card__location">PortugalA</p>
-                <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+                <a href="#" class="btn-common btn-surf" onclick="return false">view <span>surf</span></a>
               </div>
             </div>
           </li>
@@ -539,7 +539,7 @@
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Joki Beach</h3>
                 <p class="surf-card__location">South Africa</p>
-                <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+                <a href="#" class="btn-common btn-surf" onclick="return false">view <span>surf</span></a>
               </div>
             </div>
           </li>
@@ -548,7 +548,7 @@
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Kanyakumari Beach</h3>
                 <p class="surf-card__location">India</p>
-                <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+                <a href="#" class="btn-common btn-surf" onclick="return false">view <span>surf</span></a>
               </div>
             </div>
           </li>
@@ -557,7 +557,7 @@
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Catherine Hill Bay Beach</h3>
                 <p class="surf-card__location">Australia</p>
-                <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+                <a href="#" class="btn-common btn-surf" onclick="return false">view <span>surf</span></a>
               </div>
             </div>
           </li>
