iproved the menu

--- a/app/index.html
+++ b/app/index.html
@@ -171,8 +171,8 @@
         <p class="aside__location"><img src="img/header/icon-location.svg" alt="location">California</p>
       </div>
     </aside>
-    <div class="menu-toggle-btn" id="menuToggle">
-      <input type="checkbox">
+    <div class="menuToggle" id="menuToggle">
+      <input type="checkbox" id="menuCheckbox">
       <span id="span1"></span>
       <span id="span2"></span>
       <span id="span3"></span>
