--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
       </svg>
     </div>
 
-    <aside class="aside">
+    <aside class="aside animated">
       <a href="#" class="aside__logo"><img src="img/header/logo.svg" alt="logo" class="aside__logo-img"></a>
       <div class="aside__content">
         <nav>
